<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_addevent"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_addevent" />
        <item
            android:id="@+id/nav_myevents"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_myevents" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_goods"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_goods" />
    </group>

    <item android:title="@string/additional">
        <menu>
            <item
                android:id="@+id/nav_places"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_places" />
            <item
                android:id="@+id/nav_achievements"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_achievements" />
        </menu>
    </item>

</menu>
