<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_sd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/viga"
        android:gravity="start"
        android:text="@string/select_date"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_date"
        app:layout_constraintEnd_toStartOf="@+id/btn_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TitleOfEvent" />

    <AutoCompleteTextView
        android:id="@+id/TitleOfEvent"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/viga"
        android:gravity="center"
        android:hint="@string/title_your_event"
        android:inputType="text"
        android:soundEffectsEnabled="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_snog"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/viga"
        android:gravity="start"
        android:text="@string/select_number_of_guests"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleOfEvent" />

    <TextView
        android:id="@+id/tv_sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/viga"
        android:gravity="start"
        android:text="@string/select_place"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_place"
        app:layout_constraintEnd_toEndOf="@+id/tv_sd"
        app:layout_constraintStart_toStartOf="@+id/tv_snog" />

    <TextView
        android:id="@+id/tv_sg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/viga"
        android:gravity="start"
        android:text="@string/select_goods"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_store"
        app:layout_constraintEnd_toEndOf="@+id/tv_sv"
        app:layout_constraintStart_toStartOf="@+id/tv_snog" />

    <EditText
        android:id="@+id/et_number_of_guests"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/black"
        android:fontFamily="@font/viga"
        android:gravity="center"
        android:hint="@string/_13"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_snog"
        app:layout_constraintEnd_toEndOf="@+id/TitleOfEvent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_snog" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/black"
        android:fontFamily="@font/viga"
        android:gravity="center"
        android:text="@string/_13_12_11_11_12_13"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_number_of_guests"
        app:layout_constraintStart_toEndOf="@+id/tv_sd"
        app:layout_constraintTop_toBottomOf="@+id/et_number_of_guests" />
    <Button
        android:id="@+id/btn_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/black"
        android:fontFamily="@font/viga"
        android:gravity="center"
        android:text="@string/st_polova_13"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_number_of_guests"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_sd"
        app:layout_constraintTop_toBottomOf="@+id/btn_date" />

    <Button
        android:id="@+id/btn_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/black"
        android:fontFamily="@font/viga"
        android:gravity="center"
        android:text="@string/store"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_number_of_guests"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_sd"
        app:layout_constraintTop_toBottomOf="@+id/btn_place" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/confifm_the_order"
        android:textSize="24sp"
        android:fontFamily="@font/viga"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>